@@ -3,6 +3,7 @@ Version 2.0.2
 * mk6gather: add command line arguments for output and verbosity
 * mk6gather: add command line argument for max bytes to copy
 * add "mk6cp" script that uses "cp"-like syntax
+* mk6gather: add "append" and "skip" options (still experimental)
 
 Version 2.0.1
 * add "mark6gather" functions (were in vdifio).  These have partially overlapping functionality w/ the mark6sg functions.
